--- a/.github/workflows/ani-snake.yml
+++ b/.github/workflows/ani-snake.yml
@@ -17,7 +17,7 @@ jobs:
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            dist/ocean.gif?color_snake=blue&color_dots=#161b22,#0e4429,#006d32,#26a641,#39d353
 
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
