Update light code

--- a/.github/workflows/ani-snake.yml
+++ b/.github/workflows/ani-snake.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           github_user_name: lachimo 
           outputs: |
-            dist/ocean-light.gif?color_snake=#00EE76&color_dots=#ebedf0,#00868B,#00C5CD,#00E5EE,#00F5FF
+            dist/ocean-light.gif?color_snake=#e1c4e0&color_dots=#ffe6ec,#ffc2d1,#feb3c7,#ff8fab,#fb6f92
 
             
 
