--- a/.github/workflows/ani-snake.yml
+++ b/.github/workflows/ani-snake.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           github_user_name: lachimo 
           outputs: |
+          # if use gif, just use light theme because GITHUB currently not suppported method change gifs by theme
             dist/ocean.gif?color_snake=#c8a8da&color_dots=#ffe6ec,#ffc2d1,#feb3c7,#ff8fab,#fb6f92
 
             
