--- a/.github/workflows/ani-snake.yml
+++ b/.github/workflows/ani-snake.yml
@@ -17,7 +17,15 @@ jobs:
           # if use gif, just use light theme because GITHUB currently not suppported method change gifs by theme
             dist/ocean.gif?color_snake=#c8a8da&color_dots=#ffe6ec,#ffc2d1,#feb3c7,#ff8fab,#fb6f92
 
-            
+         - name: Generate Snake Animation - Light SVG
+          uses: Platane/snk@v3
+        with:
+          github_user_name: lachimo 
+          outputs: |
+          dist/github-snake-light.svg
+          color_snake: "#c8a8da"
+          color_dots: '#ffe6ec,#ffc2d1,#feb3c7,#ff8fab,#fb6f92'
+          
 
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
