--- a/.github/workflows/ani-snake.yml
+++ b/.github/workflows/ani-snake.yml
@@ -13,16 +13,22 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: lachimo 
-          outputs: |
-          # if use gif, just use light theme because GITHUB currently not suppported method change gifs by theme
+          outputs: # if use gif, just use light theme because GITHUB currently not suppported method change gifs by theme
             dist/ocean.gif?color_snake=#c8a8da&color_dots=#ffe6ec,#ffc2d1,#feb3c7,#ff8fab,#fb6f92
 
-         - name: Generate Snake Animation - Light SVG
-          uses: Platane/snk@v3
+      - name: Generate Snake Animation - Light SVG
+        uses: Platane/snk@v3
         with:
           github_user_name: lachimo 
-          outputs: |
-          dist/github-snake-light.svg
+          outputs: dist/github-snake-light.svg
+          color_snake: "#c8a8da"
+          color_dots: '#ffe6ec,#ffc2d1,#feb3c7,#ff8fab,#fb6f92'
+
+      - name: Generate Snake Animation - Dark SVG
+        uses: Platane/snk@v3
+        with: 
+          github_user_name: lachimo
+          outputs: dist/github-snake-dark.svg
           color_snake: "#c8a8da"
           color_dots: '#ffe6ec,#ffc2d1,#feb3c7,#ff8fab,#fb6f92'
           
