--- a/.github/workflows/ani-snake.yml
+++ b/.github/workflows/ani-snake.yml
@@ -20,15 +20,14 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: lachimo 
-          outputs: dist/github-snake-light.svg
+          outputs: dist/github-snake.svg
 
       - name: Generate Snake Animation - Dark SVG
         uses: Platane/snk@v3
         with: 
           github_user_name: lachimo
           outputs: dist/github-snake-dark.svg?palette=github-dark
-          color_snake: "#c8a8da"
-          color_dots: '#ffe6ec,#ffc2d1,#feb3c7,#ff8fab,#fb6f92'
+
 
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
