--- a/.github/workflows/ani-snake.yml
+++ b/.github/workflows/ani-snake.yml
@@ -1,40 +1,28 @@
-name: ani-snake
+
+name: Generate snake game
 
 on:
-  schedule:
-    - cron: "0 */12 * * *" 
-  workflow_dispatch: 
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-      - name: Generate Snake Animation
-        uses: Platane/snk@v3
+      # Snake Animation
+      - uses: Sutil/snk@master
+        id: snake-gif
         with:
-          github_user_name: lachimo 
-          outputs: # if use gif, just use light theme because GITHUB currently not suppported method change gifs by theme
-            dist/ocean.gif?color_snake=#c8a8da&color_dots=#ffe6ec,#ffc2d1,#feb3c7,#ff8fab,#fb6f92
+          github_user_name: ${{ github.repository_owner }}
+          svg_out_path: dist/github-contribution-grid-snake2.svg
+          snake_color: 'blue'
 
-      - name: Generate Snake Animation - Light SVG
-        uses: Platane/snk@v3
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          github_user_name: lachimo 
-          outputs: dist/github-snake.svg
-
-      - name: Generate Snake Animation - Dark SVG
-        uses: Platane/snk@v3
-        with: 
-          github_user_name: lachimo
-          outputs: dist/github-snake-dark.svg?palette=github-dark
-
-
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          target_branch: output  
-          build_dir: dist 
+          target_branch: output
+          build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
